--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#F8F9FB"
     tools:context=".eventDetails">
 
 
@@ -46,6 +47,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="286dp"
+                    app:cardBackgroundColor="#F8F9FB"
                     app:cardElevation="0dp">
 
                     <com.github.florent37.shapeofview.shapes.ArcView
@@ -150,7 +152,7 @@
                             android:shape="ring"
                             android:thicknessRatio="1.9"
                             app:cardElevation="0dp"
-                            app:cardBackgroundColor="@color/white3"
+                            android:background="@drawable/bgshopcustom"
                             >
 
                             <TextView
@@ -161,7 +163,9 @@
                                 android:layout_marginBottom="20dp"
                                 android:textColor="@color/black"
                                 android:text="@string/Description"
-                                android:textStyle="bold" />
+                                android:textSize="18sp"
+                                android:textStyle="bold"
+                                />
 
                             <TextView
                                 android:id="@+id/eventdesc"
