--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -14,5 +14,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logoar" />
 </LinearLayout>
