--- a/app/src/main/res/layout/activity_shop_details.xml
+++ b/app/src/main/res/layout/activity_shop_details.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#F8F9FB"
     tools:context=".shopDetails">
 
     <androidx.appcompat.widget.Toolbar
@@ -26,7 +27,8 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,6 +45,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="286dp"
+                    app:cardBackgroundColor="#F8F9FB"
                     app:cardElevation="0dp">
 
 
@@ -117,13 +120,13 @@
                             android:layout_marginBottom="5dp"
                             android:thicknessRatio="1.9"
                             app:cardBackgroundColor="@color/white3"
+
                             >
 
-
-
                             <RelativeLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
+                                android:layout_width="384dp"
+                                android:layout_height="wrap_content"
+                                android:background="@color/white">
 
                                 <TextView
                                     android:id="@+id/viewdes"
@@ -132,9 +135,10 @@
                                     android:layout_marginStart="10dp"
                                     android:layout_marginTop="20dp"
                                     android:layout_marginBottom="20dp"
-                                    android:textColor="@color/black"
                                     android:text="@string/Description"
-                                    android:textStyle="bold" />
+                                    android:textColor="@color/black"
+                                    android:textSize="18sp"
+                                    android:textStyle="bold"/>
 
                                 <TextView
                                     android:id="@+id/shopdesc"
@@ -142,8 +146,9 @@
                                     android:layout_height="wrap_content"
                                     android:layout_below="@+id/viewdes"
                                     android:lineSpacingMultiplier="1.5"
+                                    android:text="lxnvkscmlskvsnlvdlvsdvlkmvlsmvkdsml"
                                     android:padding="12dp"
-                                    android:textColor="@color/black"
+                                    android:textColor="@color/Lightblack"
                                     android:textSize="14sp" />
 
 
@@ -151,24 +156,27 @@
                                     android:id="@+id/viewtime"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginStart="10dp"
                                     android:layout_below="@+id/shopdesc"
+                                    android:layout_marginStart="10dp"
                                     android:layout_marginBottom="20dp"
-                                    android:textColor="@color/black"
                                     android:text="@string/Open_on"
-                                    android:textStyle="bold" />
+                                    android:textColor="@color/black"
+                                    android:textStyle="bold"
+                                    android:textSize="18sp"
+                                    />
 
 
                                 <androidx.recyclerview.widget.RecyclerView
                                     android:id="@+id/ShopDaysrecycleview"
                                     android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="match_parent"
                                     android:layout_below="@+id/viewtime"
-                                    android:layout_margin="2dp"
+                                    android:padding="12dp"
 
                                     />
 
                             </RelativeLayout>
+
 
                         </androidx.cardview.widget.CardView>
                     </LinearLayout>
