--- a/app/src/main/res/layout/activity_shopdays_item.xml
+++ b/app/src/main/res/layout/activity_shopdays_item.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:stretchColumns="1"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="10dp"
+    android:orientation="horizontal"
     tools:context=".shopdays_item">
-
-
-
-    <TableRow>
 
         <TextView
             android:id="@+id/shopday"
-            android:layout_width="64dp"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="5dp"
+            android:layout_weight="1"
             android:text="sunday"
-            android:textSize="15sp" />
-        <TextView
-            android:id="@+id/shopopentime"
-            android:textSize="15sp"
-            android:layout_marginStart="20dp"/>
-    </TableRow>
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
-</TableLayout>
+        <TextView
+
+            android:id="@+id/shopopentime"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="tttt"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
+</LinearLayout>
