--- a/app/src/main/res/layout/shops_item.xml
+++ b/app/src/main/res/layout/shops_item.xml
@@ -1,48 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    android:elevation="0.5dp"
-    app:cardCornerRadius="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
+    <LinearLayout
+        android:id="@+id/shopparent"
+        android:layout_width="250dp"
+        android:layout_height="320dp"
+        android:orientation="vertical"
+        android:layout_marginRight="12dp"
+        android:background="@drawable/bgitemcustom"
+        android:scaleX="0.7"
+        android:scaleY="0.7">
+
+
+
 
         <ImageView
             android:id="@+id/shopimage"
-            android:layout_width="402dp"
-            android:layout_height="150dp"
-
-            android:scaleType="centerCrop"
+            android:background="@drawable/bgshopcustom"
             android:src="@drawable/placeholder"
-            android:tint="@color/photo_tint" />
+            android:layout_width="match_parent"
+            android:scaleType="centerCrop"
+            android:layout_height="150dp"
+            />
+
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:lineSpacingExtra="8dp"
+            android:textSize="27dp"
+            android:textColor="@color/Lightblack"
+            android:text="Shop name"
+            />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:id="@+id/btnshopparent"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="0dp"
+            android:padding="10dp"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="30sp"
-            android:orientation="vertical">
+            android:alpha="0"
+            >
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:clickable="true"
-                android:text="event name"
-                android:textColor="@color/white"
-                android:textSize="22sp"
-                android:textStyle="bold" />
-
-
+            <Button
+                android:id="@+id/btnMore"
+                android:layout_width="109dp"
+                android:layout_height="37dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/btnmoreshop"
+                android:text="@string/more"
+                android:textSize="18sp"
+                />
         </LinearLayout>
 
 
-    </RelativeLayout>
-</androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+</LinearLayout>
