--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -152,5 +152,10 @@
     <color name="white3">#99FFFFFF</color>
     <color name="photo_tint">#BFA3A1A1</color>
 
+    <color name="shopdecolor">#9AF0EDED</color>
+    <color name="Lightblack">#292828</color>
+
+
+
 </resources>
 
