--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -84,21 +84,48 @@
                             android:src="@drawable/tickets_payment" />
 
                         <LinearLayout
-                            android:layout_width="220dp"
+                            android:layout_width="300dp"
                             android:layout_height="124dp"
-                            android:layout_marginStart="105dp"
+                            android:layout_marginStart="80dp"
                             android:layout_marginTop="97dp"
                             android:layout_marginEnd="40dp"
                             android:orientation="vertical">
 
                             <LinearLayout
-                                android:layout_width="236dp"
+                                android:layout_width="280dp"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
 
                                 <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_width="220dp"
+                                    android:layout_height="84dp"
+                                    android:layout_margin="1dp"
+                                    android:layout_weight="4"
+
+                                    android:orientation="vertical">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="20dp"
+                                        android:layout_weight="1"
+                                        android:text="@string/date"
+                                        android:textColor="@color/dark_gray"
+                                        android:textSize="16sp" />
+
+                                    <TextView
+                                        android:id="@+id/date"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="12dp"
+                                        android:layout_margin="5dp"
+                                        android:layout_weight="1"
+                                        android:textColor="@color/black"
+                                        android:textSize="16sp" />
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="90dp"
+                                    android:layout_height="90dp"
                                     android:layout_margin="5dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
@@ -106,6 +133,7 @@
                                     <TextView
                                         android:layout_width="53dp"
                                         android:layout_height="wrap_content"
+                                        android:layout_marginTop="18dp"
                                         android:layout_weight="1"
                                         android:text="@string/price"
                                         android:textColor="@color/dark_gray"
@@ -121,65 +149,13 @@
                                         android:textSize="16sp" />
                                 </LinearLayout>
 
-                                <LinearLayout
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="3dp"
-                                    android:layout_weight="1"
-                                    android:orientation="vertical">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:text="@string/type"
-                                        android:textColor="@color/dark_gray"
-                                        android:textSize="16sp" />
-
-                                    <TextView
-                                        android:id="@+id/type"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_margin="5dp"
-                                        android:layout_weight="1"
-                                        android:textColor="@color/black"
-                                        android:textSize="16sp" />
-                                </LinearLayout>
 
                             </LinearLayout>
 
                             <LinearLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="32dp"
                                 android:orientation="vertical">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_margin="5dp"
-                                    android:layout_weight="1"
-                                    android:orientation="vertical">
-
-                                    <TextView
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center_vertical"
-                                        android:layout_margin="1dp"
-                                        android:layout_weight="1"
-                                        android:text="@string/date"
-                                        android:textColor="@color/dark_gray"
-                                        android:textSize="16sp" />
-
-                                    <TextView
-                                        android:id="@+id/date"
-                                        android:layout_width="201dp"
-                                        android:layout_height="wrap_content"
-                                        android:layout_gravity="center_vertical"
-                                        android:layout_margin="5dp"
-                                        android:layout_weight="1"
-                                        android:textColor="@color/black"
-                                        android:textSize="16sp" />
-                                </LinearLayout>
 
 
                             </LinearLayout>
