--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -154,6 +154,7 @@
 
     <color name="shopdecolor">#9AF0EDED</color>
     <color name="Lightblack">#292828</color>
+    <color name="splah">#F4F5F6</color>
 
 
 
