--- a/app/src/main/res/layout/activity_shop_details.xml
+++ b/app/src/main/res/layout/activity_shop_details.xml
@@ -91,7 +91,7 @@
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:text="shop name"
-                            android:textColor="@color/white"
+                            android:textColor="@color/ghost_white"
                             android:textSize="30sp" />
 
 
@@ -119,7 +119,7 @@
                             android:shape="ring"
                             android:layout_marginBottom="5dp"
                             android:thicknessRatio="1.9"
-                            app:cardBackgroundColor="@color/white3"
+                            app:cardBackgroundColor="@color/ghost_white"
 
                             >
 
@@ -134,7 +134,6 @@
                                     android:layout_height="wrap_content"
                                     android:layout_marginStart="10dp"
                                     android:layout_marginTop="20dp"
-                                    android:layout_marginBottom="20dp"
                                     android:text="@string/Description"
                                     android:textColor="@color/black"
                                     android:textSize="18sp"
@@ -146,7 +145,6 @@
                                     android:layout_height="wrap_content"
                                     android:layout_below="@+id/viewdes"
                                     android:lineSpacingMultiplier="1.5"
-                                    android:text="lxnvkscmlskvsnlvdlvsdvlkmvlsmvkdsml"
                                     android:padding="12dp"
                                     android:textColor="@color/Lightblack"
                                     android:textSize="14sp" />
@@ -158,7 +156,6 @@
                                     android:layout_height="wrap_content"
                                     android:layout_below="@+id/shopdesc"
                                     android:layout_marginStart="10dp"
-                                    android:layout_marginBottom="20dp"
                                     android:text="@string/Open_on"
                                     android:textColor="@color/black"
                                     android:textStyle="bold"
@@ -171,7 +168,8 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
                                     android:layout_below="@+id/viewtime"
-                                    android:padding="12dp"
+                                    android:padding="10dp"
+
 
                                     />
 
