--- a/app/src/main/res/layout/activity_shopdays_item.xml
+++ b/app/src/main/res/layout/activity_shopdays_item.xml
@@ -1,30 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/test"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="10dp"
-    android:orientation="horizontal"
-    tools:context=".shopdays_item">
+    android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/shopday"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="sunday"
-            android:textColor="@color/black"
-            android:textSize="18sp"/>
 
-        <TextView
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal">
 
-            android:id="@+id/shopopentime"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:text="tttt"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/shopday"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:text="Sunday"
+                    android:layout_weight="1"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"/>
+
+                <TextView
+
+                    android:id="@+id/shopopentime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:text="16:20 to 20:20"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+        </LinearLayout>
+        <!--......................Divider1......................-->
+
+        <View
+            android:layout_width="310dp"
+            android:layout_marginStart="5dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="12dp"
+            android:background="@color/gray" />
+
 
 </LinearLayout>
