--- a/app/src/main/res/layout/shops_item.xml
+++ b/app/src/main/res/layout/shops_item.xml
@@ -1,69 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <LinearLayout
-        android:id="@+id/shopparent"
-        android:layout_width="250dp"
-        android:layout_height="320dp"
-        android:orientation="vertical"
-        android:layout_marginRight="12dp"
-        android:background="@drawable/bgitemcustom"
+
         android:scaleX="0.7"
-        android:scaleY="0.7">
+        android:scaleY="0.7"
+        android:orientation="vertical"
+        android:layout_width="230dp"
+        android:background="@drawable/bgshopcustom"
+        android:layout_height="wrap_content"
+        android:id="@+id/shopparent"
+
+        >
 
 
+
+        <com.github.florent37.shapeofview.shapes.RoundRectView
+            app:shape_roundRect_topRightRadius="8dp"
+            app:shape_roundRect_topLeftRadius="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
 
         <ImageView
+
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
             android:id="@+id/shopimage"
             android:background="@drawable/bgshopcustom"
             android:src="@drawable/placeholder"
-            android:layout_width="match_parent"
-            android:scaleType="centerCrop"
-            android:layout_height="150dp"
+
+
             />
 
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:lineSpacingExtra="8dp"
-            android:textSize="27dp"
-            android:textColor="@color/Lightblack"
-            android:text="Shop name"
-            />
+        </com.github.florent37.shapeofview.shapes.RoundRectView>
 
-        <LinearLayout
-            android:id="@+id/btnshopparent"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="0dp"
-            android:padding="10dp"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="384dp"
             android:layout_height="wrap_content"
-            android:alpha="0"
             >
 
-            <Button
-                android:id="@+id/btnMore"
-                android:layout_width="109dp"
-                android:layout_height="37dp"
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/btnmoreshop"
-                android:text="@string/more"
-                android:textSize="18sp"
+                android:lineSpacingExtra="8dp"
+                android:text="Ecotourism With a Master Boo"
+                android:textColor="@color/colorPrimary"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:id="@+id/des"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:lineSpacingExtra="8dp"
+                android:text="Ecotourism With a Master Boo"
+                android:textColor="#989898"
+                android:textSize="12sp"
+                android:layout_below="@+id/name"
                 />
-        </LinearLayout>
+
+
+
+            <LinearLayout
+                android:id="@+id/btnshopparent"
+                android:padding="10dp"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginLeft="16dp"
+                android:layout_below="@+id/des"
+
+                >
+
+                <Button
+                    android:id="@+id/btnMore"
+                    android:layout_width="177dp"
+                    android:layout_height="25dp"
+                    android:background="@drawable/btnmoreshop"
+                    android:text="@string/more"
+                    android:textColor="@color/wheat"
+                    android:textSize="14sp"
+                    android:layout_below="@+id/des"
+
+                    />
+
+            </LinearLayout>
+
+</RelativeLayout>
 
 
 
