--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -8,7 +8,8 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".Splash_page">
+    tools:context=".Splash_page"
+    android:background="@color/splah">
 
     <ImageView
         android:layout_width="wrap_content"
