--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="9dp"
                 android:layout_marginTop="20dp"
-                android:text="Total"
+                android:text="@string/total"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
@@ -173,7 +173,7 @@
                         android:layout_marginEnd="10dp"
                         android:layout_marginBottom="20dp"
                         android:background="@drawable/button_background"
-                        android:text="Checkout"
+                        android:text="@string/checkout"
                         android:textColor="@color/white"
                         android:textSize="14sp"
                         android:textStyle="bold"/>
