--- a/app/src/main/res/layout/activity_shop_details.xml
+++ b/app/src/main/res/layout/activity_shop_details.xml
@@ -17,7 +17,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:title="@string/event"
+        app:title="@string/Shops"
         app:titleTextColor="@color/white" />
 
 
