--- a/app/src/main/res/layout/shops_item.xml
+++ b/app/src/main/res/layout/shops_item.xml
@@ -87,7 +87,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="16dp"
                 android:layout_below="@+id/des"
-
+                android:gravity="center"
                 >
 
                 <Button
@@ -97,6 +97,7 @@
                     android:background="@drawable/btnmoreshop"
                     android:text="@string/more"
                     android:textColor="@color/wheat"
+                    android:gravity="center"
                     android:textSize="14sp"
                     android:layout_below="@+id/des"
 
