--- a/app/src/main/res/layout/ticket_item.xml
+++ b/app/src/main/res/layout/ticket_item.xml
@@ -38,7 +38,7 @@
                 android:layout_gravity="start"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:text="Adult"
+                android:text="@string/Adult"
                 android:textColor="@color/black"
                 android:textSize="22sp"
                 android:textStyle="bold" />
