--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -19,6 +19,7 @@
         android:textAlignment="center"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="@string/event"
+        app:titleTextAppearance="@style/AppTheme"
         app:titleTextColor="@color/white" />
 
 
