--- a/app/src/main/res/layout/activity_home_page_.xml
+++ b/app/src/main/res/layout/activity_home_page_.xml
@@ -20,7 +20,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:background="@color/colorPrimary">
 
                 <LinearLayout
@@ -34,11 +34,11 @@
                         android:layout_height="match_parent"
                         android:layout_marginStart="35dp"
                         android:layout_weight="1"
-                        android:gravity="center"
+                        android:gravity="center|center_horizontal"
                         android:letterSpacing="-0.02"
                         android:text="@string/Home"
                         android:textColor="@color/white"
-                        android:textSize="25sp" />
+                        android:textSize="40sp" />
 
 
                     <ImageButton
@@ -69,7 +69,7 @@
                 <com.smarteist.autoimageslider.SliderView
                     android:id="@+id/imageSlider"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="220dp"
                     app:sliderAnimationDuration="600"
                     android:layout_weight="1"
                     android:scaleType="fitXY"
@@ -130,13 +130,14 @@
 
                             <TextView
                                 android:layout_width="match_parent"
-                                android:layout_height="2dp"
+                                android:layout_height="1dp"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginTop="5dp"
                                 android:layout_marginEnd="10dp"
                                 android:background="@color/colorPrimary" />
 
                             <TextView
+                                android:textStyle="bold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
@@ -144,7 +145,7 @@
                                 android:gravity="center"
                                 android:text="@string/Booking"
                                 android:textColor="#BF9054"
-                                android:textSize="18sp" />
+                                android:textSize="26sp" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -173,13 +174,14 @@
 
                             <TextView
                                 android:layout_width="match_parent"
-                                android:layout_height="2dp"
+                                android:layout_height="1dp"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginTop="5dp"
                                 android:layout_marginEnd="10dp"
                                 android:background="@color/colorPrimary" />
 
                             <TextView
+                                android:textStyle="bold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
@@ -187,7 +189,7 @@
                                 android:gravity="center"
                                 android:text="@string/Events"
                                 android:textColor="#BF9054"
-                                android:textSize="18sp" />
+                                android:textSize="26sp" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -226,7 +228,7 @@
 
                             <TextView
                                 android:layout_width="match_parent"
-                                android:layout_height="2dp"
+                                android:layout_height="1dp"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginTop="5dp"
                                 android:layout_marginEnd="10dp"
@@ -238,9 +240,10 @@
                                 android:layout_marginTop="5dp"
                                 android:layout_marginBottom="5dp"
                                 android:gravity="center"
+                                android:textStyle="bold"
                                 android:text="@string/Shops"
                                 android:textColor="#BF9054"
-                                android:textSize="18sp" />
+                                android:textSize="26sp" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
